# PodExtract

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: config.py  main.py  models.py  worker.py
app/services/: analysis.py  database.py  extractor.py  feishu.py  job_store.py  jobs.py  kb.py  llm_client.py  memory.py  pipeline.py  processor.py  queue.py  retry.py  source.py
app/services/stt/: base.py  elevenlabs.py  minimax.py  qwen.py
docs/: architecture-vertical.html  architecture-vertical.md  architecture.html  architecture.md  feishu_minimal_permissions.json
tests/: test_analysis.py  test_llm_client.py  test_source.py  test_store.py  test_stt_word_join.py
