[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "podextract"
version = "0.1.0"
description = "Link-to-transcript pipeline with Feishu sync"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn>=0.35.0",
  "httpx>=0.28.0",
  "redis>=5.2.0",
  "yt-dlp>=2026.1.1",
  "pydantic>=2.11.0",
  "pydantic-settings>=2.6.0",
  "python-dotenv>=1.1.0",
]

[tool.uv]
package = false

[tool.setuptools.packages.find]
include = ["app*"]
